[Polyam] Fix wrong width on logo in detailed link card in web UI
Port 2c54b91dd1a0f0a622ea88628d15c8b1bdda70f7 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -1209,6 +1209,7 @@ a.status-card {
   gap: 8px;
 
   .logo {
+    width: 16px;
     height: 16px;
     color: $darker-text-color;
   }
